--- a/form-elements.html
+++ b/form-elements.html
@@ -515,12 +515,62 @@
                                           <td class="form-elements__button-style-name">Кнопка-дропдаун</td>
                                           <td>
                                                 <div class="form-elements__button-wrapper">
-
+                                                      <div class="form-elements__button-dropdown1-wrapper">
+                                                            <button
+                                                                  class="form-elements__button-dropdown1">Больше</button>
+                                                            <div class="button-dropdown1__list-wrapper">
+                                                                  <ul class="button-dropdown1__list">
+                                                                        <li><a href=""
+                                                                                    class="button-dropdown1__list-item">
+                                                                                    Первый</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-dropdown1__list-item button-dropdown1__list-item--curent">
+                                                                                    Второй</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-dropdown1__list-item button-dropdown1__list-item--curent">
+                                                                                    Третий</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-dropdown1__list-item">
+                                                                                    Четвертый</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-dropdown1__list-item">
+                                                                                    Пятый</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-dropdown1__list-item">
+                                                                                    Шестой</a></li>
+                                                                  </ul>
+                                                            </div>
+                                                      </div>
                                                 </div>
                                           </td>
                                           <td>
                                                 <div class="form-elements__button-wrapper">
-
+                                                      <div class="form-elements__button-dropdown2-wrapper">
+                                                            <button
+                                                                  class="form-elements__button-dropdown2">Больше</button>
+                                                            <div class="button-dropdown2__list-wrapper">
+                                                                  <ul class="button-dropdown2__list">
+                                                                        <li><a href=""
+                                                                                    class="button-dropdown2__list-item button-dropdown2__list-item--curent">
+                                                                                    Первый</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-dropdown2__list-item">
+                                                                                    Второй</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-dropdown2__list-item">
+                                                                                    Третий</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-dropdown2__list-item">
+                                                                                    Четвертый</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-dropdown2__list-item">
+                                                                                    Пятый</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-dropdown2__list-item">
+                                                                                    Шестой</a></li>
+                                                                  </ul>
+                                                            </div>
+                                                      </div>
                                                 </div>
                                           </td>
                                     </tr>
@@ -528,12 +578,62 @@
                                           <td class="form-elements__button-style-name">Иконка-дропдаун</td>
                                           <td>
                                                 <div class="form-elements__button-wrapper">
-
+                                                      <div class="form-elements__button-icondropdown1-wrapper">
+                                                            <button
+                                                                  class="form-elements__button-icondropdown1" aria-label="more"></button>
+                                                            <div class="button-icondropdown1__list-wrapper">
+                                                                  <ul class="button-icondropdown1__list">
+                                                                        <li><a href=""
+                                                                                    class="button-icondropdown1__list-item">
+                                                                                    Первый</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-icondropdown1__list-item button-icondropdown1__list-item--curent">
+                                                                                    Второй</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-icondropdown1__list-item button-icondropdown1__list-item--curent">
+                                                                                    Третий</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-icondropdown1__list-item">
+                                                                                    Четвертый</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-icondropdown1__list-item">
+                                                                                    Пятый</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-icondropdown1__list-item">
+                                                                                    Шестой</a></li>
+                                                                  </ul>
+                                                            </div>
+                                                      </div>
                                                 </div>
                                           </td>
                                           <td>
                                                 <div class="form-elements__button-wrapper">
-
+                                                      <div class="form-elements__button-icondropdown2-wrapper">
+                                                            <button
+                                                                  class="form-elements__button-icondropdown2" aria-label="more"></button>
+                                                            <div class="button-icondropdown2__list-wrapper">
+                                                                  <ul class="button-icondropdown2__list">
+                                                                        <li><a href=""
+                                                                                    class="button-icondropdown2__list-item button-icondropdown2__list-item--curent">
+                                                                                    Первый</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-icondropdown2__list-item">
+                                                                                    Второй</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-icondropdown2__list-item">
+                                                                                    Третий</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-icondropdown2__list-item">
+                                                                                    Четвертый</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-icondropdown2__list-item">
+                                                                                    Пятый</a></li>
+                                                                        <li><a href=""
+                                                                                    class="button-icondropdown2__list-item">
+                                                                                    Шестой</a></li>
+                                                                  </ul>
+                                                            </div>
+                                                      </div>
                                                 </div>
                                           </td>
                                     </tr>
