--- a/components.html
+++ b/components.html
@@ -54,18 +54,17 @@
                               </li>
                               <li><a class="header__navigation-menu-item--current" href="components.html">Компоненты</a>
                                     <ul class="header__navigation-list">
-                                          <li><a class="header__navigation-item" href="">Тултипы</a></li>
-                                          <li><a class="header__navigation-item" href="">Табы</a></li>
-                                          <li><a class="header__navigation-item" href="">Теги</a></li>
-                                          <li><a class="header__navigation-item" href="">Процесс-бары</a></li>
-                                          <li><a class="header__navigation-item" href="">Карточки</a></li>
+                                          <li><a class="header__navigation-item" href="#tooltip">Тултипы</a></li>
+                                          <li><a class="header__navigation-item" href="#tab">Табы</a></li>
+                                          <li><a class="header__navigation-item" href="#tag">Теги</a></li>
+                                          <li><a class="header__navigation-item" href="#progressbar">Процесс-бары</a>
+                                          </li>
+                                          <li><a class="header__navigation-item" href="#carts">Карточки</a></li>
                                     </ul>
                               </li>
                               <li><a class="header__navigation-menu-item" href="icons.html">Иконки</a>
                                     <ul class="header__navigation-list">
-                                          <li><a class="header__navigation-item" href="">Стандартный набор</a></li>
-                                          <li><a class="header__navigation-item" href="">Социальные сети</a></li>
-                                          <li><a class="header__navigation-item" href="">Флаги</a></li>
+                                          <li><a class="header__navigation-item" href="">Material</a></li>
                                     </ul>
                               </li>
                         </ul>
@@ -81,7 +80,8 @@
                                     дублировать и создавать новые интерфейсы на их основе.</p>
                         </header>
                         <section class="components__tooltip">
-                              <h2 class="visually-hidden">Поля</h2>
+                              <a id="tooltip"></a>
+                              <h2 class="visually-hidden">Тултипы</h2>
                               <table class="components__tooltip-table">
                                     <caption class="components__tooltip-headline">Тултипы</caption>
                                     <tr class="components__tooltip-hint">
@@ -112,6 +112,7 @@
                               </table>
                         </section>
                         <section class="components__tab">
+                              <a id="tab"></a>
                               <h2 class="visually-hidden">Табы</h2>
                               <table class="components__tab-table">
                                     <caption class="components__tab-headline">Табы</caption>
@@ -174,6 +175,7 @@
                               </table>
                         </section>
                         <section class="components__tag">
+                              <a id="tag"></a>
                               <h2 class="visually-hidden"></h2>
                               <table class="components__tag-table">
                                     <caption class="components__tag-headline">Теги</caption>
@@ -232,6 +234,7 @@
                               </table>
                         </section>
                         <section class="components__progressbar">
+                              <a id="progressbar"></a>
                               <h2 class="visually-hidden">Прогресс-бары</h2>
                               <table class="components__progressbar-table">
                                     <caption class="components__progressbar-headline">Прогресс-бары</caption>
@@ -266,6 +269,7 @@
                               </table>
                         </section>
                         <section class="components__carts">
+                              <a id="carts"></a>
                               <h2 class="components__carts-headline">Карточки</h2>
                               <div class="components__carts-wrapper">
                                     <div class="components__cart1">
