--- a/form-elements.html
+++ b/form-elements.html
@@ -32,12 +32,14 @@
                               <li><a class="header__navigation-menu-item--current" href="form-elements.html">Элементы
                                           формы</a>
                                     <ul class="header__navigation-list">
-                                          <li><a class="header__navigation-item" href="">Поля</a></li>
-                                          <li><a class="header__navigation-item" href="">Селекты</a></li>
+                                          <li><a class="header__navigation-item" href="#field-style">Поля</a></li>
+                                          <li><a class="header__navigation-item" href="#select-style">Селекты</a></li>
                                           <li><a class="header__navigation-item" href="">Дропдауны</a></li>
-                                          <li><a class="header__navigation-item" href="">Кнопки</a></li>
-                                          <li><a class="header__navigation-item" href="">Сообщения</a></li>
-                                          <li><a class="header__navigation-item" href="">Дополнительно</a></li>
+                                          <li><a class="header__navigation-item" href="#button-style">Кнопки</a></li>
+                                          <li><a class="header__navigation-item" href="#messenge-style">Сообщения</a>
+                                          </li>
+                                          <li><a class="header__navigation-item"
+                                                      href="#addition-style">Дополнительно</a></li>
                                     </ul>
                               </li>
                               <li><a class="header__navigation-menu-item" href="modal-map.html">Модальные окна</a>
@@ -64,9 +66,7 @@
                               </li>
                               <li><a class="header__navigation-menu-item" href="icons.html">Иконки</a>
                                     <ul class="header__navigation-list">
-                                          <li><a class="header__navigation-item" href="">Стандартный набор</a></li>
-                                          <li><a class="header__navigation-item" href="">Социальные сети</a></li>
-                                          <li><a class="header__navigation-item" href="">Флаги</a></li>
+                                          <li><a class="header__navigation-item" href="">Material</a></li>
                                     </ul>
                               </li>
                         </ul>
@@ -80,6 +80,7 @@
                               <p class="form-elements__header-subtitle">Формы — важная часть любого интерфейса.</p>
                         </header>
                         <section class="form-elements__field-style">
+                              <a id="field-style"></a>
                               <h2 class="visually-hidden">Поля</h2>
                               <table class="form-elements__field-style-table">
                                     <caption class="form-elements__field-style-headline">Поля</caption>
@@ -254,6 +255,7 @@
                               </table>
                         </section>
                         <section class="form-elements__select-style">
+                              <a id="select-style"></a>
                               <h2 class="visually-hidden">Селекты</h2>
                               <table class="form-elements__select-style-table">
                                     <caption class="form-elements__select-style-headline">Селекты</caption>
@@ -413,6 +415,7 @@
                               </table>
                         </section>
                         <section class="form-elements__button-style">
+                              <a id="button-style"></a>
                               <h2 class="visually-hidden">Кнопки</h2>
                               <table class="form-elements__button-style-table">
                                     <caption class="form-elements__button-style-header">
@@ -579,8 +582,8 @@
                                           <td>
                                                 <div class="form-elements__button-wrapper">
                                                       <div class="form-elements__button-icondropdown1-wrapper">
-                                                            <button
-                                                                  class="form-elements__button-icondropdown1" aria-label="more"></button>
+                                                            <button class="form-elements__button-icondropdown1"
+                                                                  aria-label="more"></button>
                                                             <div class="button-icondropdown1__list-wrapper">
                                                                   <ul class="button-icondropdown1__list">
                                                                         <li><a href=""
@@ -609,8 +612,8 @@
                                           <td>
                                                 <div class="form-elements__button-wrapper">
                                                       <div class="form-elements__button-icondropdown2-wrapper">
-                                                            <button
-                                                                  class="form-elements__button-icondropdown2" aria-label="more"></button>
+                                                            <button class="form-elements__button-icondropdown2"
+                                                                  aria-label="more"></button>
                                                             <div class="button-icondropdown2__list-wrapper">
                                                                   <ul class="button-icondropdown2__list">
                                                                         <li><a href=""
@@ -761,6 +764,7 @@
                               </table>
                         </section>
                         <section class="form-elements__messenge-style">
+                              <a id="messenge-style"></a>
                               <h2 class="visually-hidden">Сообщения</h2>
                               <table class="form-elements__messenge-style-table">
                                     <caption class="form-elements__messenge-style-headline">Сообщения</caption>
@@ -845,6 +849,7 @@
                               </table>
                         </section>
                         <section class="form-elements__addition-style">
+                              <a id="addition-style"></a>
                               <h2 class="visually-hidden">Дополнительно</h2>
                               <table class="form-elements__addition-style-table">
                                     <caption class="form-elements__addition-style-headline">Дополнительно</caption>
