--- a/icons.html
+++ b/icons.html
@@ -63,9 +63,7 @@
                               </li>
                               <li><a class="header__navigation-menu-item--current" href="icons.html">Иконки</a>
                                     <ul class="header__navigation-list">
-                                          <li><a class="header__navigation-item" href="">Стандартный набор</a></li>
-                                          <li><a class="header__navigation-item" href="">Социальные сети</a></li>
-                                          <li><a class="header__navigation-item" href="">Флаги</a></li>
+                                          <li><a class="header__navigation-item" href="#material">Material</a></li>
                                     </ul>
                               </li>
                         </ul>
@@ -81,6 +79,7 @@
                                     создавать новые интерфейсы на их основе.</p>
                         </header>
                         <section class="icon__material">
+                              <a id="material"></a>
                               <h2 class="icon__headline">Material</h2>
                               <div class="icon__actions">
                                     <h3 class="icon__name">Action</h3>
