--- a/modal-map.html
+++ b/modal-map.html
@@ -43,8 +43,9 @@
                               <li><a class="header__navigation-menu-item--current" href="modal-map.html">Модальные
                                           окна</a>
                                     <ul class="header__navigation-list">
-                                          <li><a class="header__navigation-item" href="">Уведомления</a></li>
-                                          <li><a class="header__navigation-item" href="">Окна</a></li>
+                                          <li><a class="header__navigation-item" href="#notice-style">Уведомления</a>
+                                          </li>
+                                          <li><a class="header__navigation-item" href="#map-style">Окна</a></li>
                                     </ul>
                               </li>
                               <li><a class="header__navigation-menu-item" href="blocks.html">Блоки</a>
@@ -65,9 +66,7 @@
                               </li>
                               <li><a class="header__navigation-menu-item" href="icons.html">Иконки</a>
                                     <ul class="header__navigation-list">
-                                          <li><a class="header__navigation-item" href="">Стандартный набор</a></li>
-                                          <li><a class="header__navigation-item" href="">Социальные сети</a></li>
-                                          <li><a class="header__navigation-item" href="">Флаги</a></li>
+                                          <li><a class="header__navigation-item" href="">Material</a></li>
                                     </ul>
                               </li>
                         </ul>
@@ -82,6 +81,7 @@
                                     элемент, который можно найти в списке элементов.</p>
                         </header>
                         <section class="modal-map__notice-style">
+                              <a id="notice-style"></a>
                               <h2 class="visually-hidden">Уведомления</h2>
                               <table class="modal-map__notice-style-table">
                                     <caption class="modal-map__notice-style-headline">Уведомления</caption>
@@ -148,6 +148,7 @@
                               </table>
                         </section>
                         <section class="modal-map__map-style">
+                              <a id="map-style"></a>
                               <h2 class="visually-hidden">Окна</h2>
                               <table class="modal-map__map-style-table">
                                     <caption class="modal-map__map-style-headline">Окна</caption>
