--- a/blocks.html
+++ b/blocks.html
@@ -47,9 +47,9 @@
                               </li>
                               <li><a class="header__navigation-menu-item--current" href="blocks.html">Блоки</a>
                                     <ul class="header__navigation-list">
-                                          <li><a class="header__navigation-item" href="">Хедеры</a></li>
-                                          <li><a class="header__navigation-item" href="">Футеры</a></li>
-                                          <li><a class="header__navigation-item" href="">Остальное</a></li>
+                                          <li><a class="header__navigation-item" href="#header">Хедеры</a></li>
+                                          <li><a class="header__navigation-item" href="#footer">Футеры</a></li>
+                                          <li><a class="header__navigation-item" href="#more">Остальное</a></li>
                                     </ul>
                               </li>
                               <li><a class="header__navigation-menu-item" href="components.html">Компоненты</a>
@@ -63,9 +63,7 @@
                               </li>
                               <li><a class="header__navigation-menu-item" href="icons.html">Иконки</a>
                                     <ul class="header__navigation-list">
-                                          <li><a class="header__navigation-item" href="">Стандартный набор</a></li>
-                                          <li><a class="header__navigation-item" href="">Социальные сети</a></li>
-                                          <li><a class="header__navigation-item" href="">Флаги</a></li>
+                                          <li><a class="header__navigation-item" href="">Material</a></li>
                                     </ul>
                               </li>
                         </ul>
@@ -81,6 +79,7 @@
                                     случаи.</p>
                         </header>
                         <section class="blocks__header">
+                              <a id="header"></a>
                               <h2 class="blocks__headline">Хедеры</h2>
                               <h3 class="blocks__name">Хедер #1</h3>
                               <header class="blocks__header1-wrapper">
@@ -104,6 +103,7 @@
                               </header>
                         </section>
                         <section class="blocks__footer">
+                              <a id="footer"></a>
                               <h2 class="blocks__headline">Футеры</h2>
                               <h3 class="blocks__name">Футер #1</h3>
                               <footer class="blocks__footer1-wrapper">
@@ -195,6 +195,7 @@
                               </footer>
                         </section>
                         <section class="blocks__more">
+                              <a id="more"></a>
                               <h2 class="blocks__headline">Остальное</h2>
                               <section class="blocks__more-file">
                                     <h3 class="blocks__name">Добавление файла</h3>
