--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
                               </li>
                               <li><a class="header__navigation-menu-item" href="icons.html">Иконки</a>
                                     <ul class="header__navigation-list">
-                                          <li><a class="header__navigation-item" href="">Стандартный набор</a></li>
-                                          <li><a class="header__navigation-item" href="">Социальные сети</a></li>
-                                          <li><a class="header__navigation-item" href="">Флаги</a></li>
+                                          <li><a class="header__navigation-item" href="">Material</a></li>
                                     </ul>
                               </li>
                         </ul>
