--- a/blocks.html
+++ b/blocks.html
@@ -225,12 +225,12 @@
                                     <h3 class="blocks__name">Слайдер с отзывами</h3>
                                     <div class="more-slider__container">
                                           <div class="more-slider__wrapper">
-                                                <div class="more-slider__slider1">
+                                                <div class="more-slider__slider1 more-slider__slider--active">
                                                       <p class="more-slider__slider1-text">«Речь зашла об одном из
                                                             соседних помещиков. «Дрянь,
                                                             аристократишко»,– равнодушно заметил Базаров, который
                                                             встречался с ним в Петербурге. Речь зашла об одном из
-                                                            соседних помещиков.</p>
+                                                            соседних помещиков»</p>
                                                       <div class="more-slider__slider1-autor"><img
                                                                   class="more-slider__slider1-autor-img"
                                                                   src="img/avatar-black.svg" width="50" height="50">
@@ -241,17 +241,15 @@
 
                                                 </div>
                                                 <div class="more-slider__slider2">
-                                                      <p class="more-slider__slider1-text">«Речь зашла об одном из
-                                                            соседних помещиков. «Дрянь,
-                                                            аристократишко»,– равнодушно заметил Базаров, который
-                                                            встречался с ним в Петербурге. Речь зашла об одном из
-                                                            соседних помещиков.</p>
-                                                      <div class="more-slider__slider1-autor"><img
-                                                                  class="more-slider__slider1-autor-img"
+                                                      <p class="more-slider__slider2-text">«Какой самый живучий паразит?
+                                                            Бактерия? Вирус? Идея. Она живучая и крайне заразная. Стоит
+                                                            идее завладеть мозгом, избавиться от нее практически
+                                                            невозможно. Я имею в виду сформировавшуюся идею, полностью
+                                                            осознанную, поселившуюся в голове»</p>
+                                                      <div class="more-slider__slider2-autor"><img
+                                                                  class="more-slider__slider2-autor-img"
                                                                   src="img/avatar-black.svg" width="50" height="50">
-                                                            <p class="more-slider__slider1-autor-name">Иван Тургенев,
-                                                                  заслуженный
-                                                                  критик</p>
+                                                            <p class="more-slider__slider2-autor-name">Кто-то</p>
                                                       </div>
 
                                                 </div>
@@ -272,7 +270,7 @@
                                     <h3 class="blocks__name">Слайдер с фотографиями</h3>
                                     <div class="more-photo__wrapper">
                                           <ul class="more-photo__slider-container">
-                                                <li class="more-photo__slider">
+                                                <li class="more-photo__slider more-photo__slider--active">
                                                       <img src="img/unsplash.jpg" class="more-photo__slider1-img"
                                                             width="1039" height="692" alt="photo-one">
 
@@ -434,7 +432,7 @@
                   </div>
             </main>
       </div>
-      <script src="js/scripts.js"></script>
+      <script src="js/blocks.js"></script>
 </body>
 
 </html>
