--- a/blocks.html
+++ b/blocks.html
@@ -206,7 +206,7 @@
                                                 </p>
                                                 <label class="more-file__form-input-wrapper"><input
                                                             id="more-file__form-input" type="file" name="photo" multiple
-                                                            accept="image/*,image/jpeg" onchange="getFileParam();">
+                                                            accept="image/*,image/jpeg">
 
                                                       <span class="more-file__form-button">Выбрать файл</span>
                                                 </label>
@@ -218,7 +218,8 @@
                                                 </div>
                                                 <div id="more-file__file-preview">&nbsp;</div>
                                           </div>
-                                          <input class="more-file__form-submit" type="submit" value="Отправить">
+                                          <input class="more-file__form-submit" type="submit" value="Отправить"
+                                                style="display: none;">
                                     </div>
                               </section>
                               <section class="blocks__more-sliders">
